# QtForge Build Options
# Configure various aspects of the QtForge build system

# Library build options
# Note: default_library is a built-in Meson option, no need to redefine it

# Component build options
option('build_examples',
  type: 'boolean',
  value: true,
  description: 'Build example applications and plugins'
)

option('build_tests',
  type: 'boolean',
  value: true,
  description: 'Build unit tests and integration tests'
)

option('build_benchmarks',
  type: 'boolean',
  value: true,
  description: 'Build performance benchmarks'
)

option('build_docs',
  type: 'boolean',
  value: true,
  description: 'Build documentation using Doxygen'
)

option('build_component_tests',
  type: 'boolean',
  value: true,
  description: 'Build component-specific tests'
)

# Language bindings
option('python_bindings',
  type: 'boolean',
  value: false,
  description: 'Build Python bindings using pybind11'
)

option('python_bindings_install',
  type: 'boolean',
  value: true,
  description: 'Install Python bindings'
)

option('python_bindings_tests',
  type: 'boolean',
  value: false,
  description: 'Build Python binding tests'
)

option('lua_bindings',
  type: 'boolean',
  value: false,
  description: 'Build Lua bindings using sol2'
)

option('lua_bindings_install',
  type: 'boolean',
  value: true,
  description: 'Install Lua bindings'
)

option('lua_bindings_tests',
  type: 'boolean',
  value: false,
  description: 'Build Lua binding tests'
)

option('lua_enable_sandbox',
  type: 'boolean',
  value: true,
  description: 'Enable Lua script sandboxing for security'
)

# Qt component options (auto-detected but can be forced)
option('force_qt_network',
  type: 'boolean',
  value: false,
  description: 'Force enable Qt Network support (fail if not available)'
)

option('force_qt_widgets',
  type: 'boolean',
  value: false,
  description: 'Force enable Qt Widgets support (fail if not available)'
)

option('force_qt_sql',
  type: 'boolean',
  value: false,
  description: 'Force enable Qt SQL support (fail if not available)'
)

option('force_qt_concurrent',
  type: 'boolean',
  value: false,
  description: 'Force enable Qt Concurrent support (fail if not available)'
)

option('force_qt_statemachine',
  type: 'boolean',
  value: false,
  description: 'Force enable Qt StateMachine support (fail if not available)'
)

# Compiler and build options
option('enable_warnings',
  type: 'boolean',
  value: true,
  description: 'Enable compiler warnings'
)

option('enable_werror',
  type: 'boolean',
  value: false,
  description: 'Treat warnings as errors'
)

option('enable_sanitizers',
  type: 'boolean',
  value: false,
  description: 'Enable address and undefined behavior sanitizers (debug builds only)'
)

option('enable_lto',
  type: 'boolean',
  value: false,
  description: 'Enable Link Time Optimization for release builds'
)

option('enable_fast_math',
  type: 'boolean',
  value: false,
  description: 'Enable fast math optimizations (may reduce precision)'
)

# Advanced options
option('qt_method',
  type: 'combo',
  choices: ['auto', 'pkgconfig', 'qmake', 'cmake'],
  value: 'auto',
  description: 'Method to use for Qt detection'
)

option('install_private_headers',
  type: 'boolean',
  value: false,
  description: 'Install private headers (for development use only)'
)

option('enable_plugin_sandbox',
  type: 'boolean',
  value: false,
  description: 'Enable experimental plugin sandboxing features'
)



option('enable_hot_reload',
  type: 'boolean',
  value: false,  # Temporarily disabled due to MOC issues in tests
  description: 'Enable plugin hot reload capabilities'
)

option('enable_metrics',
  type: 'boolean',
  value: true,
  description: 'Enable plugin metrics collection'
)

option('enable_transactions',
  type: 'boolean',
  value: false,  # Temporarily disabled due to MOC issues
  description: 'Enable plugin transaction management'
)

option('enable_orchestration',
  type: 'boolean',
  value: false,  # Temporarily disabled due to missing classes
  description: 'Enable advanced plugin orchestration features'
)

option('enable_composition',
  type: 'boolean',
  value: false,  # Temporarily disabled due to missing headers
  description: 'Enable plugin composition features'
)

option('enable_component_logging',
  type: 'boolean',
  value: false,
  description: 'Enable detailed component logging'
)

option('enable_plugin_profiling',
  type: 'boolean',
  value: false,
  description: 'Enable plugin performance profiling'
)

option('enable_security_hardening',
  type: 'boolean',
  value: true,
  description: 'Enable security hardening features'
)

# Installation options
option('install_examples',
  type: 'boolean',
  value: false,
  description: 'Install example applications and source code'
)

option('install_tests',
  type: 'boolean',
  value: false,
  description: 'Install test binaries and data'
)

option('install_cmake_config',
  type: 'boolean',
  value: true,
  description: 'Install CMake configuration files for compatibility'
)

option('install_pkgconfig',
  type: 'boolean',
  value: true,
  description: 'Install pkg-config files'
)

# Python binding installation options
option('python_install_dir',
  type: 'string',
  value: '',
  description: 'Python module installation directory (auto-detected if empty)'
)

option('python_min_version',
  type: 'string',
  value: '3.8',
  description: 'Minimum required Python version'
)

option('python_max_version',
  type: 'string',
  value: '3.12',
  description: 'Maximum supported Python version'
)

# Lua binding installation options
option('lua_install_dir',
  type: 'string',
  value: '',
  description: 'Lua module installation directory (auto-detected if empty)'
)

option('lua_min_version',
  type: 'string',
  value: '5.4',
  description: 'Minimum required Lua version'
)

option('lua_max_version',
  type: 'string',
  value: '5.4',
  description: 'Maximum supported Lua version'
)

option('sol2_min_version',
  type: 'string',
  value: '3.3.0',
  description: 'Minimum required sol2 version'
)

# Packaging options
option('package_format',
  type: 'combo',
  choices: ['none', 'zip', 'tar.gz', 'tar.xz'],
  value: 'none',
  description: 'Package format for distribution'
)

option('package_vendor',
  type: 'string',
  value: 'QtForge Project',
  description: 'Vendor name for packages'
)

option('package_maintainer',
  type: 'string',
  value: 'QtForge Maintainers <maintainers@qtforge.org>',
  description: 'Maintainer information for packages'
)
